feat: Update mapeamento e entities
