# src/infra/http/index.ts
@@ -1,19 +1,15 @@
-import { Router } from "express";
+import { Router } from 'express';
 
-import clientRoutes from "./routes/ClientRoutes";
-import categoryRoutes from "./routes/CategoryRoutes";
-import snackRoutes from "./routes/SnackRoutes";
-import accompanimentRoutes from "./routes/AccompanimentRoutes";
-import drinkRoutes from "./routes/DrinkRoutes";
-import orderRoutes from "./routes/OrderRoutes";
+import clientRoutes from './routes/ClientRoutes';
+import categoryRoutes from './routes/CategoryRoutes';
+import orderRoutes from './routes/OrderRoutes';
+import productRoutes from './routes/ProductRoutes';
 
 const router = Router();
 
-router.use("/clients", clientRoutes)
-router.use("/categories", categoryRoutes)
-router.use("/snacks", snackRoutes)
-router.use("/accompaniments", accompanimentRoutes)
-router.use("/drinks", drinkRoutes)
-router.use("/orders", orderRoutes)
+router.use('/clients', clientRoutes);
+router.use('/categories', categoryRoutes);
+router.use('/orders', orderRoutes);
+router.use('/products', productRoutes);
 
 export default router;
